WikiaMiniUpload: remove this to prevent a bit of width "flickering"

--- a/wikia/branches/Bartek/extensions/wikia/WikiaMiniUpload/css/WMU.css
+++ b/wikia/branches/Bartek/extensions/wikia/WikiaMiniUpload/css/WMU.css
@@ -165,7 +165,6 @@
 
 /***INSERT OPTIONS***/
 .ImageUploadOptionsTable {
-	width: 400px;
 	color: #000;
 }
 .ImageUploadOptionsTable th {
